# picam-hailo

./: CMakeLists.txt  Dockerfile.native-arm64  Readme.MD  config.hpp  config.ini  raw_hailo_inference.cpp
.github/workflows/: build.yml
debian/: conffiles  control  copyright  debhelper-build-stamp  files  picam-hailo.postrm.debhelper  picam-hailo.service  picam-hailo.substvars  postinst  rules
debian/.debhelper/picam-hailo/: dbgsym-build-ids
debian/.debhelper/picam-hailo/dbgsym-root/DEBIAN/: control  md5sums
debian/picam-hailo/DEBIAN/: conffiles  control  md5sums  postrm  prerm
debian/picam-hailo/etc/sysctl.d/: 60-picam-hailo.conf
debian/picam-hailo/usr/share/picam-hailo/: config.ini
